style: fixed spacing

--- a/client/src/styles/components/_signup.scss
+++ b/client/src/styles/components/_signup.scss
@@ -10,7 +10,7 @@
   &__card {
     background-color: white;
     border-radius: 0.5rem;
-    padding: 4rem 0 4rem 0;
+    padding: 2rem 0 2rem 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -19,8 +19,6 @@
       flex-direction: column;
       align-items: center;
       margin: 2rem;
-      //   width: 1rem;
-      //   justify-content: center;
       &__forgot {
         font-family: $default-font;
         span {
